web/css/site.css
/* ... */
.main-form .content {
    font-size: 18px;
    color: #18284b;
    top: 5px;
    text-align: center;
}
.main-form .content .h2, .main-form .content .p {
    font-size: 18px;
    font-family: Helvetical;
}
.main-form textarea, .modal-body textarea {
    resize: none;
}
.main-form .btn-warning {
    background-color: #fab917;
}
.main-about {
    background-image: url("/img/main_about_bg.png");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    min-height: 500px;
}
.main-about .content {
    font-size: 20px;
    color: #ffffff;
    font-family: Helvetical;
    top:20px;
}
.main-about .btn-warning {
    background-color: #fab917;
}
.main-about ul {
    font-family: Helvetical-light;
}
.main-orange {
    font-family: Helvetical;
    background-color: #fab917;
    text-align: center;
    color: #ffffff;
    font-size: 30px;
    padding: 10px;
}

/*

    SIDE BAR

 */

.sidebar .main{
    padding: 10px 10px 0 10px;
    position: relative;
    width: 100%;
}

.sidebar .li, .sidebar a, .sidebar ul{
    width: 100%;
}

nav.sidebar{
    width: 100%;
    height: 100%;
    margin-bottom: 0;
    margin-left: 0;
    float: left;
}

nav.sidebar.navbar.sidebar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
    margin-left: 0px;
}

nav.sidebar .navbar-brand, nav.sidebar .navbar-header{
    text-align: center;
    width: 100%;
    margin-left: 0px;
}

nav.sidebar a{
    padding-right: 13px;
}

nav.sidebar .navbar-nav > li:first-child{
    border-top: 1px #e5e5e5 solid;
}

nav.sidebar .navbar-nav > li{
    border-bottom: 1px #e5e5e5 solid;
}

nav.sidebar .navbar-nav .open .dropdown-menu {
    position: static;
    float: none;
    width: auto;
    margin-top: 0;
    background-color: transparent;
    border: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
}

nav.sidebar .navbar-collapse, nav.sidebar .container-fluid{
    padding: 0 0px 0 0px;
}

.navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
    color: #777;
}

nav.sidebar li {
    width: 100%;
}

nav.sidebar .navbar-nav .open .dropdown-menu>li>a:hover, nav.sidebar .navbar-nav .open .dropdown-menu>li>a:focus {
    color: #CCC;
    background-color: transparent;
}

nav:hover .forAnimate{
    opacity: 1;
}
.sidebar section{
    padding-left: 15px;
}

/*
    Scroll to top
*/

.bluezed-scroll-top {
    bottom: 70px!important;
    right: 30px!important;
}

.bluezed-scroll-top-circle {
    width: 40px!important;
    height: 40px!important;
    background-color: #fab917!important;
    padding-top: 8px!important;
    font-size: 1.5em!important;
    border: 2px solid #ffffff!important;
    color: #ffffff;
}

#quoteModal .modal-content{
    background-image: url("/img/main_form_bg.png");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

.photo-container-small {
    border: 1px solid #2A2A2A;
    display: inline-block;
    overflow:hidden;
    width: 50px;
    height: 50px;
    margin: 5px;
    border-radius: 4px;
}

.photo-container-small img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.image-input {
    width: 100%;
    height: 90px;
    border: 2px dashed #555;
    border-radius: 7px;
    display: none;
    padding: 30px;
}

.gallery-item img {
    margin: 5px;
    width: 195px;
    height: 160px;
}

ol.indicator {
    display: none!important;
}

.project-container {
    display: inline-block;
    /*width: 219px;*/
    height: auto;
    margin: 5px;
}

.project-container img {
    position: relative!important;
    width: 100%!important;
    height: auto!important;
}

/** {*/
/*background: #000 !important;*/
/*color: #0f0 !important;*/
/*outline: solid #f00 1px !important;*/
/*}*/

